# test-supervisor-streaming

./: .env.example  .gitignore  README.md  analysis_agent.py  langgraph.json  plan.md  pyproject.toml  research_agent.py  supervisor.py  test_both_graph_types.py  test_manual_supervisor.py  test_mre.py
analysis_agent/: analysis_agent.py  langgraph.json
research_agent/: langgraph.json
src/analysis_agent/: __init__.py  analysis_agent.py  analysis_agent_scratch.py
src/research_agent/: __init__.py  research_agent.py  research_agent_scratch.py
src/supervisor_agent/: __init__.py  local_supervisor.py  remote_supervisor.py  supervisor.py  supervisor_manual.py  supervisor_scratch.py  supervisor_test_local.py
supervisor_agent/: langgraph.json  supervisor.py  supervisor_error_log.txt
